[package]
name = "pop_launch_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["alloc", "serde"] }
date_time_parser = "0.2.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
radix_trie = "0.2.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
time = "0.3.31"
uuid = { version = "1.6.1", features = ["v4"] }

[[bin]]
name = "pass"
path = "src/pass.rs"

[[bin]]
name = "todo"
path = "src/todo.rs"
